[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-mcp-server"
version = "0.1.0"
description = "FastMCP server project"
authors = [
    { name="akila", email="akila.t@techovirish.com" }
]
dependencies = [
    "mysql-connector-python",
    "fastmcp",
    "python-Levenshtein"
]

[tool.smithery]
entrypoint = "server.py"
startCommand = { command = "python", args = ["server.py"] }


