[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leave-manager-mcp"
version = "0.1.0"
dependencies = [
    "mysql-connector-python",
    "fastmcp",
    "python-Levenshtein"
]

[tool.smithery]
entrypoint = "server.py"
startCommand = { command = "python", args = ["server.py"] }